@@ -1,5 +1,6 @@
 package com.nhl.link.move.extractor.model;
 
+import java.util.Collection;
 import java.util.Map;
 
 import com.nhl.link.move.RowAttribute;
@@ -12,13 +13,20 @@ import com.nhl.link.move.extractor.Extractor;
  */
 public interface ExtractorModel {
 	
-	public static final String DEFAULT_NAME = "default_extractor";
+	String DEFAULT_NAME = "default_extractor";
 
 	String getName();
 
 	String getType();
 
+	@Deprecated
 	String getConnectorId();
+
+	/**
+	 * @return Collection of connector IDs
+	 * @since 2.2
+     */
+	Collection<String> getConnectorIds();
 
 	Map<String, String> getProperties();
 
