@@ -1,7 +1,11 @@
 package com.nhl.link.move.extractor.model;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 import com.nhl.link.move.RowAttribute;
 
@@ -12,13 +16,14 @@ public class MutableExtractorModel implements ExtractorModel {
 
 	private String name;
 	private String type;
-	private String connectorId;
+	private Set<String> connectorIds;
 	private long loadedOn;
 	private RowAttribute[] attributes;
 	private Map<String, String> properties;
 
 	public MutableExtractorModel(String name) {
 		this.name = name;
+		this.connectorIds = new HashSet<>();
 		this.properties = new HashMap<>();
 	}
 
@@ -39,7 +44,18 @@ public class MutableExtractorModel implements ExtractorModel {
 
 	@Override
 	public String getConnectorId() {
-		return connectorId;
+		if (connectorIds.isEmpty()) {
+			// connector IDs can be missing if this model is a part of a model container
+			return null;
+		} if (connectorIds.size() == 1) {
+			return connectorIds.iterator().next();
+		}
+		throw new IllegalStateException("Multiple connector IDs specified in model");
+	}
+
+	@Override
+	public Collection<String> getConnectorIds() {
+		return connectorIds;
 	}
 
 	@Override
@@ -52,8 +68,11 @@ public class MutableExtractorModel implements ExtractorModel {
 		return loadedOn;
 	}
 
-	public void setConnectorId(String connectorId) {
-		this.connectorId = connectorId;
+	/**
+	 * @since 2.2
+     */
+	public void addConnectorId(String connectorId) {
+		this.connectorIds.add(connectorId);
 	}
 
 	public void setAttributes(RowAttribute... rowKeys) {
