@@ -4,6 +4,7 @@ Release 2.2
 #114 Targets mapped event before merging update
 #116 tokenManager is null in DefaultDeleteBuilder
 #117 JdbcNormalizer for java.time classes
+#120 Multiple connectors for a single extractor
 
 Release 2.1
 
